@@ -513,7 +513,7 @@ public abstract class GenericDaoBase<T, ID extends Serializable> extends Compone
                 if (st == SelectType.Entity) {
                     results.add((M)toEntityBean(rs, false));
                 } else if (st == SelectType.Fields || st == SelectType.Result) {
-                    M m = sc.getResultType().newInstance();
+                    M m = sc.getResultType().getDeclaredConstructor().newInstance();
                     for (int j = 1; j <= fields.size(); j++) {
                         setField(m, fields.get(j - 1), rs, j);
                     }
@@ -1908,11 +1908,13 @@ public abstract class GenericDaoBase<T, ID extends Serializable> extends Compone
     protected T toVO(ResultSet result, boolean cache) throws SQLException {
         T entity;
         try {
-            entity = _entityBeanType.newInstance();
+            entity = _entityBeanType.getDeclaredConstructor().newInstance();
         } catch (InstantiationException e1) {
             throw new CloudRuntimeException("Unable to instantiate entity", e1);
         } catch (IllegalAccessException e1) {
             throw new CloudRuntimeException("Illegal Access", e1);
+        } catch (ReflectiveOperationException e1) {
+            throw new CloudRuntimeException("Unable to instantiate entity", e1);
         }
         toEntityBean(result, entity);
         if (cache && _cache != null) {
@@ -1987,12 +1989,14 @@ public abstract class GenericDaoBase<T, ID extends Serializable> extends Compone
                     }
                 } else {
                     try {
-                        Collection coll = (Collection) ec.rawClass.newInstance();
+                        Collection coll = (Collection) ec.rawClass.getDeclaredConstructor().newInstance();
                         coll.addAll(lst);
                         attr.field.set(entity, coll);
                     } catch (IllegalAccessException e) {
                         throw new CloudRuntimeException("Come on we screen for this stuff, don't we?", e);
                     } catch (InstantiationException e) {
+                        throw new CloudRuntimeException("Never should happen", e);
+                    } catch (ReflectiveOperationException e) {
                         throw new CloudRuntimeException("Never should happen", e);
                     }
                 }
