@@ -1848,13 +1848,9 @@ public class LibvirtComputingResource extends ServerResourceBase implements Serv
 
         try {
             final Class<?> clazz = Class.forName(vifDriverClassName);
-            vifDriver = (VifDriver)clazz.newInstance();
+            vifDriver = (VifDriver)clazz.getDeclaredConstructor().newInstance();
             vifDriver.configure(params);
-        } catch (final ClassNotFoundException e) {
-            throw new ConfigurationException("Unable to find class for libvirt.vif.driver " + e);
-        } catch (final InstantiationException e) {
-            throw new ConfigurationException("Unable to instantiate class for libvirt.vif.driver " + e);
-        } catch (final IllegalAccessException e) {
+        } catch (final ReflectiveOperationException e) {
             throw new ConfigurationException("Unable to instantiate class for libvirt.vif.driver " + e);
         }
         return vifDriver;
